--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html/> 
 <html>
-    <head></head>
+    <head>
+        <link rel = "stylesheet" src =
+    </head>
     <body></body>
 <img src = "https://s-media-cache-ak0.pinimg.com/736x/c7/90/7c/c7907cd0242fca01ead881e10831cd85.jpg">
 <img src = "http://www.uk-anime.net/images/ajin.jpg">
